--- a/assets/html/styles/styles_Smartphones_320x480.css
+++ b/assets/html/styles/styles_Smartphones_320x480.css
@@ -382,7 +382,6 @@
         margin-bottom: 10px;
         height: 220px;
         width: 100%;
-        display: inline-block;
         overflow: hidden;
     }
 
@@ -726,6 +725,10 @@
         width: 100%;
         margin: 20px;
     }
+    
+    .divPreguntasRespuestasDetalle h2 {
+        font-weight:normal;
+    }
 
     .tableEncabezadoPregunta {
         background-color: #9C5018;
@@ -734,6 +737,7 @@
         -webkit-border-radius: 8px;
         -moz-border-radius: 8px;
         border-radius: 8px;
+        padding:5px;
     }
 
     #spanEncabezadoPregunta {
@@ -752,6 +756,10 @@
     .divTriviaRiesgo {
         width: 95%;
         margin: 20px;
+    }
+    
+    .divTriviaRiesgo h2 {
+        font-weight:normal;
     }
 
     .divTextoCasoRiesgo {
@@ -775,6 +783,7 @@
         -webkit-border-radius: 8px;
         -moz-border-radius: 8px;
         border-radius: 8px;
+        padding:5px;
     }
 
     .divAyudaContainer {
