--- a/assets/html/styles/styles_Smartphones_480x854 - Copy.css
+++ b/assets/html/styles/styles_Smartphones_480x854 - Copy.css
@@ -16,12 +16,12 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     font-weight: inherit;
     font-style: inherit;
     font-size: 100%;
-    font-family: inherit;
+    font-family: times;
     vertical-align: baseline;
 }
 
 body {
-    font-family: Arial;
+    
     background: url(../images/tablet/backgrounds/fondo_general.png) no-repeat center;
     -webkit-background-size: 200%;
     -moz-background-size: 200%;
@@ -46,18 +46,18 @@ input {
 }
 
 p {
-    font-family: Arial;
+    
     font-style: normal;
 }
 
 h2 {
-    font-family: Arial;
+    
     color: white;
     font-size: x-large;
 }
 
 .divTituloAplicacion {
-    margin-top: 12%;
+    margin-top: 12.5%;
     text-align: left;
     z-index: 10;
     position: absolute;
@@ -65,7 +65,7 @@ h2 {
 
     .divTituloAplicacion span {
         color: Black;
-        font-family: Arial;
+        
     }
 
 .lblSubtituloAplicacion {
