--- a/assets/html/styles/styles_Smartphones_480x854.css
+++ b/assets/html/styles/styles_Smartphones_480x854.css
@@ -84,7 +84,7 @@
     .page {
         display: none;
         opacity: 0;
-        height: 200px;
+        height: 195px;
         overflow: no-display;
     }
 
@@ -711,6 +711,7 @@
         padding: 10px;
         overflow-x: auto;
         overflow-x: hidden;
+        font-size:10pt;
     }
 
     .divImagenCamposTrivia {
@@ -740,7 +741,7 @@
 
     .divPreguntaRespuestasContainer {
         width: 60%;
-        height: 180px;
+        height: 190px;
         display: inline-block;
         float: left;
     }
@@ -752,15 +753,16 @@
 
     .tableEncabezadoPregunta {
         background-color: #9C5018;
-        height: 45px;
+        height: 40px;
         vertical-align: middle;
         -webkit-border-radius: 8px;
         -moz-border-radius: 8px;
         border-radius: 8px;
+        padding:10px;
     }
 
     .tableEncabezadoPregunta h2{
-        font-size:12pt;
+        font-size:10pt;
     }
 
     .divTriviaRiesgo {
@@ -799,6 +801,7 @@
         -webkit-border-radius: 8px;
         -moz-border-radius: 8px;
         border-radius: 8px;
+        padding:5px;
     }
 
     .divAyudaContainer {
@@ -882,6 +885,7 @@
                 border-radius: 8px;
                 text-align: center;
                 font-weight: normal;
+                font-size:8pt;
                 padding: 5px;
             }
 
@@ -891,6 +895,7 @@
                 -moz-border-radius: 8px;
                 border-radius: 8px;
                 padding: 0px;
+                font-size:8pt;
                 text-align: left;
             }
 
@@ -1178,12 +1183,10 @@
     }
 
         .divCuadroPlanAhorroDerecha table thead tr td {
-            -webkit-border-radius: 4px;
-            -moz-border-radius: 4px;
-            border-radius: 4px;
+            
             text-align: center;
-            padding-left: 5px;
-            padding-right: 5px;
+            padding-left: 1px;
+            padding-right: px;
             padding-top: 2px;
             padding-bottom: 2px;
             vertical-align: middle;
@@ -1214,7 +1217,7 @@
                 padding-bottom: 5px;
                 text-align: center;
                 color: black;
-                width: 65%;
+                width: auto ;
                 margin-left: 0px;
                 color: white;
                 background-color: transparent;
