--- a/assets/html/styles/styles_Tablet_1280x1920.css
+++ b/assets/html/styles/styles_Tablet_1280x1920.css
@@ -4,6 +4,13 @@
 /* Desktops and laptops ----------- */
 @media all and (min-width : 1281px) and (max-width : 1920px)
 {
+     @font-face {
+        font-family: Futura;
+        src: url('../fonts/Futura-Medium.woff');
+        src: url('../fonts/Futura-Medium.eot');
+        src: url('../fonts/Futura-Medium.ttf');
+    }
+
 
     html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td
     {
@@ -20,7 +27,7 @@
 
     body
     {
-        font-family: Arial;
+        font-family: Futura;
         background: url(../images/tablet/backgrounds/fondo_general.png) no-repeat center;
         -webkit-background-size: cover;
         -moz-background-size: cover;
@@ -31,13 +38,13 @@
     
     span
     {
-        font-family: Arial;
+        font-family: Futura;
         font-weight: bold;
     }
 
     p
     {
-        font-family: Arial;
+        font-family: Futura;
         font-style: normal;
     }
 
@@ -54,7 +61,7 @@
 
     h2
     {
-        font-family: Arial;
+        font-family: Futura;
         color: white;
         font-size: 26pt;
         font-weight: 900;
@@ -71,7 +78,7 @@
     .divTituloAplicacion span
     {
         color: Black;
-        font-family: Arial;
+        font-family: Futura;
     }
 
     .lblSubtituloAplicacion
@@ -105,6 +112,7 @@
         width: 321px;
         height: 51px;
         cursor: pointer;
+        font-family:Futura;
     }
 
     .btnMenu.chico
@@ -115,6 +123,7 @@
         width: 275px;
         height: 51px;
         cursor: pointer;
+        font-family: Futura;
     }
 
     .btnMenu.chicoInferior
@@ -701,6 +710,7 @@
         height: 51px;
         cursor: pointer;
         color: white;
+        font-family:Futura;
     }
 
     .divOpcionesInfoSeccion
@@ -1068,10 +1078,11 @@
         padding-bottom: 5px;
         text-align: center;
         color: black;
-        width: 60%;
+        width: 90%;
         margin-left: 0px;
         color: white;
         background-color: transparent;
+        font-family:Futura;
     }
 
     .divCuadroCalculadoraPresupuestoDerecha table tbody tr:nth-child(odd)
@@ -1279,6 +1290,7 @@
         padding-top: 2px;
         padding-bottom: 2px;
         font-size: 16pt;
+        font-family:Futura;
     }
 
     .divCuadroPlanAhorroDerecha table tbody tr td input
@@ -1292,11 +1304,12 @@
         padding-bottom: 5px;
         text-align: center;
         color: black;
-        width: 65%;
+        width: 90%;
         margin-left: 0px;
         color: white;
         background-color: transparent;
         font-size: 60%;
+        font-family:Futura;
     }
 
     .divCuadroPlanAhorroDerecha table tfoot tr td
@@ -1432,6 +1445,7 @@
         margin-left: 0px;
         color: white;
         background-color: transparent;
+        font-family:Futura;
     }
 
     #btnGuardarAhorro
