--- a/assets/html/styles/styles_TabletOtro.css
+++ b/assets/html/styles/styles_TabletOtro.css
@@ -4,8 +4,12 @@
 /* Desktops and laptops ----------- */
 @media all and (min-width : 856px) and (max-width : 1024px)
 {
-
-
+    @font-face {
+        font-family: Futura;
+        src: url('../fonts/Futura-Medium.woff');
+        src: url('../fonts/Futura-Medium.eot');
+        src: url('../fonts/Futura-Medium.ttf');
+    }
     html, body, div, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td
     {
         margin: 0;
@@ -21,7 +25,7 @@
 
     body
     {
-        font-family: Arial;
+        font-family: Futura;
         background: url(../images/tablet/backgrounds/fondo_general.png) no-repeat center;
         -webkit-background-size: cover;
         -moz-background-size: cover;
@@ -32,13 +36,13 @@
    
     span
     {
-        font-family: Arial;
+        font-family: Futura;
         font-weight: bold;
     }
 
     p
     {
-        font-family: Arial;
+        font-family: Futura;
         font-style: normal;
     }
 
@@ -55,7 +59,7 @@
 
     h2
     {
-        font-family: Arial;
+        font-family: Futura;
         color: white;
         font-size: 26pt;
         font-weight: 900;
@@ -72,7 +76,7 @@
     .divTituloAplicacion span
     {
         color: Black;
-        font-family: Arial;
+        font-family: Futura;
     }
 
     .lblSubtituloAplicacion
@@ -158,9 +162,9 @@
         height: 51px;
         cursor: pointer;
         color: white;
-        text-align: left;
-        font-weight: bolder;
-        padding-left: 10%;
+        text-align: center;
+        padding: 2%;
+        font-family:Futura;
     }
 
     .btnMenuChicorio
@@ -571,8 +575,6 @@
     {
         /*background: url('../images/tablet/buttons/action/boton_que_es.png') no-repeat top;         -webkit-background-size: cover;         -moz-background-size: cover;         -o-background-size: cover;         background-size: cover;*/
         color: white;
-        font-weight: bolder;
-        font-size: medium;
         text-wrap: initial;
         white-space: normal;
         background-color: #E96A2D;
@@ -582,8 +584,6 @@
     {
         /*background: url('../images/tablet/buttons/action/boton_que_es.png') no-repeat top;         -webkit-background-size: cover;         -moz-background-size: cover;         -o-background-size: cover;         background-size: cover;*/
         color: white;
-        font-weight: bolder;
-        font-size: medium;
         text-wrap: normal;
         white-space: normal;
         background-color: #ED883D;
@@ -645,7 +645,6 @@
     {
         /*background: url('../images/tablet/buttons/action/fondo_pregunta.png') no-repeat top;         -webkit-background-size: cover;         -moz-background-size: cover;         -o-background-size: cover;         background-size: cover;*/
         background-color: #E96A2D;
-        font-size: 13pt;
         white-space: normal;
     }
 
@@ -653,7 +652,6 @@
     {
         /*background: url('../images/tablet/buttons/action/fondo_pregunta.png') no-repeat top;         -webkit-background-size: cover;         -moz-background-size: cover;         -o-background-size: cover;         background-size: cover;*/
         background-color: #ED883D;
-        font-size: 13pt;
         white-space: normal;
     }
 
@@ -728,7 +726,9 @@
         width: 100%;
         height: 51px;
         cursor: pointer;
+        font-size: 13pt;
         color: white;
+        font-family:Futura;
     }
 
     .divOpcionesInfoSeccion
@@ -815,15 +815,16 @@
         font-size: 20pt;
     }
 
-    #spanEstimuloRecibido
-    {
-        font-size: 20pt;
-    }
 
     .divTriviaRiesgo
     {
         width: 95%;
         margin: 20px;
+    }
+    
+    .divTriviaRiesgo h2
+    {
+        font-weight:normal;
     }
     
     #spanEncabezadoPreguntaAtreves
@@ -1059,7 +1060,6 @@
 
     .divCuadroCalculadoraPresupuestoDerecha table thead tr td
     {
-        /*background-color: #9C5018;*/
         -webkit-border-radius: 4px;
         -moz-border-radius: 4px;
         border-radius: 4px;
@@ -1093,10 +1093,11 @@
         padding-bottom: 5px;
         text-align: center;
         color: black;
-        width: 60%;
+        width: 90%;
         margin-left: 0px;
         color: white;
         background-color: transparent;
+        font-family:Futura;
     }
 
     .divCuadroCalculadoraPresupuestoDerecha table tbody tr:nth-child(odd)
@@ -1316,10 +1317,11 @@
         padding-bottom: 5px;
         text-align: center;
         color: black;
-        width: 60%;
+        width: 90%;
         margin-left: 0px;
         color: white;
         background-color: transparent;
+        font-family:Futura;
     }
 
     .divCuadroPlanAhorroDerecha table tfoot tr td
@@ -1455,6 +1457,7 @@
         margin-left: 0px;
         color: white;
         background-color: transparent;
+        font-family:Futura;
     }
 
     #btnGuardarAhorro
